# purr

./: .gitignore  README.md  debugger.lua  magic_example.bash  pyproject.toml  setup.py
purr/: main.py
purr/clumps/image/: colorize.py  filter.py
purr/clumps/image/mirror/: entry.py
purr/clumps/image/plot/: entry.py
purr/clumps/image/split/: __init__.py
purr/clumps/text/: html_combine.py
