[tool.poetry]
name = "purr"
version = "0.1.0"
description = ""
authors = ["Pete-Louise <pete.asclepiadoideae@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
typer = "^0.9.0"
numpy = "^1.26.0"


[tool.poetry.scripts]
purr = "main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

